<resources>
    <string name="app_name">MiniApp1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pbd">PBD2021</string>
    <string name="miniApp">Android Mini App 1</string>
    <string name="university">university</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dots">dots</string>
    <string name="share">Share</string>
    <string name="send_email">Send group email</string>
    <string name="send_mms">Send group mms</string>
    <string name="name">Contact name</string>
    <string name="number">Contact number</string>
    <string name="email">Contact email</string>
    <string name="add">add</string>
    <string name="quit">Quit program</string>
    <string name="remove">Re-upload contacts</string>
    <string name="dialogTitle">Old data will be removed and current phone contacts will be uploaded. Proceed?</string>
    <string name="dialogTitleExit">Are you sure you want to quit?</string>
</resources>