<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MessageFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/share"
        android:textSize="30sp" />

    <Button
        android:id="@+id/mms_btn"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        app:backgroundTint="@color/grey"
        android:textColor="@android:color/black"
        android:text="@string/send_mms" />

    <Button
        android:id="@+id/email_btn"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_above="@+id/mms_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        app:backgroundTint="@color/grey"
        android:textColor="@android:color/black"
        android:text="@string/send_email" />

</RelativeLayout>